<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_label">GEM Settings</string>
    
    <!-- Section devoted to runnable performance enhancements -->
    <string name="title_performance">Performance</string>
    <string name="summary_performance">Various services for the system</string>

        <string name="title_services">Services</string>

            <string name="title_services_compcache">Compcache</string>
            <string name="summary_on_services_compcache">Compcache is currently running</string>
            <string name="summary_off_services_compcache">Compcache is not currently running</string>

        <string name="title_cpufreq">CPU frequency scaling - Requires Reboot</string>

            <string name="title_cpufreq_enable">Enable CPU frequency scaling</string>
            <string name="summary_on_cpufreq_enable">CPU overclocking will occur at boot-time</string>
            <string name="summary_off_cpufreq_enable">CPU overclocking will not occur at boot-time</string>

            <string name="title_cpufreq_governor">Scaling Governor</string>

            <string name="title_cpufreq_minimum">Minimum Overclocking Speed</string>

            <string name="title_cpufreq_maximum">Maximum Overclocking Speed</string>

    <!-- Section devoted to audio tweaks -->
    <string name="title_audio">Audio</string>
    <string name="summary_audio">Various audio features/enhancements</string>

        <string name="title_volume_button_music_controls">Volume Button Music Controls</string>
        <string name="summary_on_volume_button_music_controls">Volume buttons will seek through music tracks</string>
        <string name="summary_off_volume_button_music_controls">Volume buttons will not seek through music tracks</string>

        <string name="title_display_lockscreen_music_controls">Lockscreen Music Controls</string>
        <string name="summary_display_lockscreen_music_controls">When the lockscreen music controls will be displayed</string>

        <string name="title_dspmanager">DSP Manager</string>
        <string name="summary_dspmanager">Manage audio signal processing</string>

    <!-- Provides UI for some Scriptybox functions -->
    <string name="scriptybox">Scriptybox</string>
    <string name="summary_scriptybox">Scripts</string>
	
	<string name="title_adblock">Adblock</string>
	<string name="summary_on_adblock">Most ads will be blocked</string>
	<string name="summary_off_adblock">Most ads will not be blocked</string>

	<string name="title_camera_sounds">Turn Off Camera Sounds</string>
	<string name="summary_on_camera_sounds">Camera sounds will be stopped from playing</string>
	<string name="summary_off_camera_sounds">Camera sounds will not be stopped from playing</string>

	<string name="title_use_rotary_lockscreen">Rotary Lockscreen</string>
        <string name="summary_on_use_rotary_lockscreen">Rotary lockscreen will be used</string>
        <string name="summary_off_use_rotary_lockscreen">Rotary lockscreen will not be used</string>

	<string name="title_remove_apk">Remove System Apps</string>
	<string name="summary_remove_apk">Delete Unwanted System Apps</string>	

    <!-- Section devoted to user interface tweaking -->
    <string name="title_ui_tweaks">User interface tweaks</string>
    <string name="summary_ui_tweaks">Now with 100% less reboots!</string>

        <string name="title_ui_tweaks_status_bar">Status Bar</string>

            <string name="title_ui_tweaks_status_bar_color_clock">Clock</string>
            <string name="title_ui_tweaks_status_bar_color_date">Date</string>
            <string name="title_ui_tweaks_status_bar_color_label_spn">Carrier SPN label</string>
            <string name="title_ui_tweaks_status_bar_color_label_plmn">Carrier PLMN label</string>
            <string name="title_ui_tweaks_status_bar_color_battery_percentage">Battery Percentage</string>

        <string name="title_ui_tweaks_notifications">Notifications</string>

            <string name="title_ui_tweaks_notifications_color_ticker_text">Ticker text</string>
            <string name="title_ui_tweaks_notifications_color_none">No notifications title</string>
            <string name="title_ui_tweaks_notifications_color_latest">Latest notifications title</string>
            <string name="title_ui_tweaks_notifications_color_ongoing">Ongoing notifications title</string>
            <string name="title_ui_tweaks_notifications_color_clear_button">Clear button text</string>
            <string name="title_ui_tweaks_notifications_color_item_title">Item title</string>
            <string name="title_ui_tweaks_notifications_color_item_text">Item text</string>
            <string name="title_ui_tweaks_notifications_color_item_progress_text">Item progress bar text</string>
            <string name="title_ui_tweaks_notifications_color_item_time">Item time</string>

        <string name="title_ui_tweaks_display">Show/hide</string>

            <string name="title_ui_tweaks_display_status_bar_clock">Status bar clock</string>
            <string name="summary_on_ui_tweaks_display_status_bar_clock">Clock is displayed in the status bar</string>
            <string name="summary_off_ui_tweaks_display_status_bar_clock">Clock is not displayed in the status bar</string>

            <string name="title_ui_tweaks_display_battery_percentage">Battery percentage</string>
            <string name="summary_on_ui_tweaks_display_battery_percentage">Battery percentage is displayed over the battery icon</string>
            <string name="summary_off_ui_tweaks_display_battery_percentage">Battery percentage is not displayed over the battery icon</string>

    <!-- Accesses Dev Tools and Spare Parts -->
    <string name="title_tools">Other Tools</string>
    <string name="summary_tools">Miscellaneous Other Options</string>
	
	<string name="title_spare_parts">Spare Parts</string>
	<string name="summary_spare_parts">Various minor device tweaks</string>
	
	<string name="title_dev_tools">Dev Tools</string>
	<string name="summary_dev_tools">Miscellaneous tools for developers</string>	
	
    <!-- Other options not fit for other categories -->
    <string name="title_extras">Extras</string>
    <string name="summary_extras">Extra little tweaks</string>

	<string name="title_display_adb_usb_debugging_notif">Display USB debugging</string>
        <string name="summary_on_display_adb_usb_debugging_notif">The USB debugging notification will be displayed</string>
        <string name="summary_off_display_adb_usb_debugging_notif">The USB debugging notification will not be displayed</string>

	<string name="title_display_notification_led_screen_on">LED while screen on</string>
        <string name="summary_on_display_notification_led_screen_on">Notification LED will blink while the screen is on</string>
        <string name="summary_off_display_notification_led_screen_on">Notification LED will not blink while the screen is on</string>
	
	<string name="title_auto_brightness_minimum_backlight_level">Auto-brightness minimum level</string>
        <string name="summary_auto_brightness_minimum_backlight_level">Set the lowest backlight level for auto-brightness mode</string>

	<string name="title_kill_app_longpress_back">Kill app longpress back</string>
        <string name="summary_on_kill_app_longpress_back">The foreground app will be killed when longpressing back</string>
        <string name="summary_off_kill_app_longpress_back">The foreground app will not be killed when longpressing back</string>

	<string name="title_cwiidconfig">CWiiD Configuration</string>
	<string name="summary_cwiidconfig">Manage WiiMote connectivity settings</string>

    <!-- Settings for push update notifications -->
    <string name="title_gemnotifications">GEM Notifications</string>
    <string name="summary_gemnotifications">Register for update notifications</string>

    <!-- Settings for the galaxy s power widget -->
    <string name="title_galaxy_s_widget">Galaxy S Power Widget</string>
    <string name="summary_galaxy_s_widget">Manage Galaxy S notification power widget</string>

        <string name="title_galaxy_s_widget_display">Display Galaxy S Widget</string>
        <string name="summary_on_galaxy_s_widget_display">The widget will be displayed in the notification pulldown</string>
        <string name="summary_off_galaxy_s_widget_display">The widget will not be displayed in the notification pulldown</string>

        <string name="title_galaxy_s_widget_indicator_color">Indicator Color</string>
        <string name="summary_galaxy_s_widget_indicator_color">Color of the indicator on the buttons</string>

        <string name="title_galaxy_s_widget_select_buttons">Select Buttons</string>
        <string name="summary_galaxy_s_widget_select_buttons">Select which buttons should be displayed/used</string>

            <string name="summary_on_galaxy_s_widget_select_button_format">The %s button will be displayed</string>
            <string name="summary_off_galaxy_s_widget_select_button_format">The %s button will not be displayed</string>

        <string name="title_galaxy_s_widget_order_buttons">Order Buttons</string>
        <string name="summary_galaxy_s_widget_order_buttons">Select the order of the buttons in the widget</string>
</resources>
