<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:cvpcs="http://schemas.cvpcs.org/apk/res/android">

    <PreferenceCategory
        android:title="Extras">
 
        <CheckBoxPreference
            android:key="display_adb_usb_debugging_notif"
            android:title="@string/title_display_adb_usb_debugging_notif"
            android:summaryOn="@string/summary_on_display_adb_usb_debugging_notif"
            android:summaryOff="@string/summary_off_display_adb_usb_debugging_notif" />

        <CheckBoxPreference
            android:key="display_notification_led_screen_on"
            android:title="@string/title_display_notification_led_screen_on"
            android:summaryOn="@string/summary_on_display_notification_led_screen_on"
            android:summaryOff="@string/summary_off_display_notification_led_screen_on" />


        <org.cvpcs.android.gem_settings.utils.SeekBarStepPreference
            android:key="auto_brightness_minimum_backlight_level"
            android:title="@string/title_auto_brightness_minimum_backlight_level"
            android:summary="@string/summary_auto_brightness_minimum_backlight_level"
            cvpcs:dialogMessage="Auto brightness minimum"
            cvpcs:prefixText="Level "
            cvpcs:defaultValue="16"
            cvpcs:steps="@array/auto_brightness_minimum_backlight_level" />

        <CheckBoxPreference
            android:key="kill_app_longpress_back"
            android:title="@string/title_kill_app_longpress_back"
            android:summaryOn="@string/summary_on_kill_app_longpress_back"
            android:summaryOff="@string/summary_off_kill_app_longpress_back" />

	<CheckBoxPreference
            android:key="use_rotary_lockscreen"
            android:title="@string/title_use_rotary_lockscreen"
            android:summaryOn="@string/summary_on_use_rotary_lockscreen"
            android:summaryOff="@string/summary_off_use_rotary_lockscreen" />
    </PreferenceCategory>

    <PreferenceScreen android:key="cwiidconfig"
        android:title="@string/title_cwiidconfig"
        android:summary="@string/summary_cwiidconfig">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="org.cvpcs.android.cwiidconfig"
            android:targetClass="org.cvpcs.android.cwiidconfig.activity.CWiiDConfig" />
    </PreferenceScreen>

</PreferenceScreen>
