<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:cvpcs="http://schemas.cvpcs.org/apk/res/android">

    <CheckBoxPreference
        android:key="volume_button_music_controls"
        android:title="@string/title_volume_button_music_controls"
        android:summaryOn="@string/summary_on_volume_button_music_controls"
        android:summaryOff="@string/summary_off_volume_button_music_controls" />

    <ListPreference
        android:key="display_lockscreen_music_controls"
        android:title="@string/title_display_lockscreen_music_controls"
        android:summary="@string/summary_display_lockscreen_music_controls"
        android:entries="@array/entries_display_lockscreen_music_controls"
        android:entryValues="@array/entryValues_display_lockscreen_music_controls" />

    <PreferenceScreen android:key="dspmanager"
        android:title="@string/title_dspmanager"
        android:summary="@string/summary_dspmanager">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.bel.android.dspmanager"
            android:targetClass="com.bel.android.dspmanager.activity.DSPManager" />
    </PreferenceScreen>

</PreferenceScreen>
