<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:cvpcs="http://schemas.cvpcs.org/apk/res/android">

    <PreferenceCategory
        android:title="Tools">
 

    <PreferenceScreen android:key="spare_parts"
        android:title="@string/title_spare_parts"
        android:summary="@string/summary_spare_parts">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.spare_parts"
            android:targetClass="com.android.spare_parts.SpareParts" />
    </PreferenceScreen>

    <PreferenceScreen android:key="development"
        android:title="@string/title_dev_tools"
        android:summary="@string/summary_dev_tools">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.development"
            android:targetClass="com.android.development.Development" />
    </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
